fix: Checkstyle警告の修正 (ListCommandTest, urlcrawlerrorssamples/ListCommandTest, ResponseWriterTest)